corpus/script.txt
================================================================================
Script - script ts 
================================================================================

<script lang="ts">
const ax:number = 1;
console.log(ax);
function x(axd:string){
  console.log(ax);
}
</script>

-------------------------------------------------------------------------------

(component
  (script_element
    (start_tag
      (tag_name)
      (script_lang 
        (ts_lang)))
    (raw_text)
    (end_tag
      (tag_name))
  ))
